samples/_failures_safe/1761436198_033407_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8262fba1.c: In function ‘main’:
./samples/SAFE/__tmp_8262fba1.c:147:13: error: expected declaration or statement at end of input
  147 |             best_type = results[i].type;
      |             ^~~~~~~~~
./samples/SAFE/__tmp_8262fba1.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8262fba1.c:147:13: error: expected declaration or statement at end of input
